[package]
name = "r2v"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
image = "0.25.1"
itertools = "0.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
tiny-skia = "0.11.4"
